@@ -277,6 +277,13 @@ value is @code{0}, which disables any additional support on @code{malloc}.
 Setting its value to @code{1} enables the use of @code{madvise} with
 @code{MADV_HUGEPAGE} after memory allocation with @code{mmap}.  It is enabled
 only if the system supports Transparent Huge Page (currently only on Linux).
+
+Setting its value to @code{2} enables the use of Huge Page directly with
+@code{mmap} with the use of @code{MAP_HUGETLB} flags.  The huge page size
+to use will be the default one provided by the system.  A value larger than
+@code{2} specifies a specific huge page size, which will be matched against
+the system supported ones.  If neither the default huge page size or if the
+provided value is invalid, the huge page size usage is disabled.
 @end deftp
 
 @node Dynamic Linking Tunables
